# electronics-shop-project

./: pyproject.toml  set.py
homework-5/: main.py
homework-6/: main.py
src/: item.py  keyboard.py  phone.py  probe.py
tests/: test_item.py  test_items.csv  test_keyboard.py
